--- a/client/src/app/home-page/home-page.component.html
+++ b/client/src/app/home-page/home-page.component.html
@@ -1,48 +1,10 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
 <body>
-  <div class="header">
-    <div class="logo-title">
-      <a href="#default" class="logo">Tech-Blog</a>
-    </div>
-    <div class="header-right">
-      <a routerLink="sign-up">Sign Up</a>
-      <a routerLink="login">Log in</a>
-    </div>
-      <a routerLink="/" routerLinkActive="active">Home</a>
-      <a href="#contact">Contact</a>
-      <a href="#about">About</a>
-    </div>
-  <router-outlet></router-outlet>
-</body>
-</html> -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tech Blog</title>
-</head>
-<body>
-    <header>
-        <div class="logo-title">
-            <h1>Techblog</h1>
+    <section class="hero">
+      <div class="overlay">
+        <div class="hero-text">
+          <h2>Welcome to Tech Blog</h2>
+          <p>Your source for the latest in technology news and trends.</p>
         </div>
-        <nav>
-            <ul>
-                <li><a routerLink="/" routerLinkActive="active">Home</a></li>
-                <li><a routerLink="login">Login</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-      <router-outlet></router-outlet>
-    </main>
+      </div>
+    </section>
 </body>
-</html>
