--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -1,13 +1,14 @@
 <header>
-    <div class="logo-title">
-        <h1>Techblog</h1>
-    </div>
-    <nav>
-        <ul>
-            <li><a routerLink="home" routerLinkActive="active">Home</a></li>
-            <li><a routerLink="login">Login</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
+  <div class="logo-title">
+    <h1>Techblog</h1>
+  </div>
+  <nav>
+    <ul>
+      <li><a routerLink="home" routerLinkActive="active">Home</a></li>
+      <li *ngIf="!isLoggenIn"><a routerLink="login">Login</a></li>
+      <li *ngIf="isLoggenIn"><a href="#" (click)="logout()">Logout</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
 </header>
 <router-outlet></router-outlet>
