--- a/client/src/app/home-page/home-page.component.html
+++ b/client/src/app/home-page/home-page.component.html
@@ -1,10 +1,10 @@
 <body>
-    <section class="hero">
-      <div class="overlay">
-        <div class="hero-text">
-          <h2>Welcome to Tech Blog</h2>
-          <p>Your source for the latest in technology news and trends.</p>
-        </div>
+  <section class="hero">
+    <div class="overlay">
+      <div class="hero-text">
+        <h2>Welcome to Tech Blog {{data ? data : ""}}</h2>
+        <p>Your source for the latest in technology news and trends.</p>
       </div>
-    </section>
+    </div>
+  </section>
 </body>
