--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,1 +1,18 @@
-<p>login works!</p>
+<div>
+  <h2>Signup</h2>
+  <form [formGroup]="signupForm" (ngSubmit)="onSignup()">
+    <label>Username:</label>
+    <input type="text" formControlName="username" required>
+    <label>Password:</label>
+    <input type="password" formControlName="password" required>
+    <button type="submit">Signup</button>
+  </form>
+  <h2>Login</h2>
+  <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+    <label>Username:</label>
+    <input type="text" formControlName="username" required>
+    <label>Password:</label>
+    <input type="password" formControlName="password" required>
+    <button type="submit">Login</button>
+  </form>
+</div>
