--- a/client/src/app/admin-panel/admin-panel.component.html
+++ b/client/src/app/admin-panel/admin-panel.component.html
@@ -1,2 +1,12 @@
-<p>admin-panel works!</p>
-<h1>[data]</h1>
+<div class="admin-container">
+    <nav class="admin-sidebar">
+      <ul>
+        <li><a routerLink="dashboard" routerLinkActive="active">Dashboard</a></li>
+        <li><a routerLink="admins" routerLinkActive="active">Admins</a></li>
+        <li><a routerLink="posts" routerLinkActive="active">Posts</a></li>
+      </ul>
+    </nav>
+    <div class="admin-content">
+      <router-outlet></router-outlet>
+    </div>
+</div>
